k8s-azure/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: taskflow-backend-service
  namespace: taskflow
spec:
  type: LoadBalancer
  selector:
    app: taskflow-backend
  ports:
    - port: 8000
      targetPort: 8000
