k8s-azure/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: taskflow-frontend-service
  namespace: taskflow
spec:
  type: LoadBalancer
  selector:
    app: taskflow-frontend
  ports:
    - port: 80
      targetPort: 80
